refactor: update test assertions to use getFirst() for improved clarity